DELTASPIKE-48 fixed sonar findings